# mcp-fssp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json
src/mcp_fssp/: __init__.py  audit_db.py  byok_limit.py  client_base.py  config.py  constants.py  context.py  errors.py  normalize.py  schemas.py  server.py
src/mcp_fssp/parsers/: __init__.py  damia.py
src/mcp_fssp/providers/: __init__.py  atomno_pro.py  damia.py
src/mcp_fssp/tools/: __init__.py  check_individual_debts.py  check_legal_entity_debts.py  get_proceeding_details.py
tests/: conftest.py  test_audit_db.py  test_cli.py  test_config.py  test_errors.py  test_normalize.py  test_parsers_damia.py  test_provider_damia.py  test_schemas.py  test_server_smoke.py  test_tools.py
