[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-fssp"
version = "0.1.1"
description = "MCP server for Russian FSSP (bailiff service) debt lookups: enforcement proceedings (ИП) for individuals and legal entities via multi-provider fallback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno-mcp.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "fssp",
  "russia",
  "bailiff",
  "due-diligence",
  "compliance",
  "kontragent",
  "fintech",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "Natural Language :: Russian",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=3.0.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-fssp"
Repository = "https://github.com/atomno-mcp/mcp-fssp"
Issues = "https://github.com/atomno-mcp/mcp-fssp/issues"
Changelog = "https://github.com/atomno-mcp/mcp-fssp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/atomno-mcp/mcp-fssp#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.scripts]
atomno-mcp-fssp = "mcp_fssp.server:main"
mcp-fssp = "mcp_fssp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fssp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mcp_fssp/**",
  "tests/**",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
  ".env.example",
  "Dockerfile",
  "glama.json",
]
exclude = [
  "**/__pycache__/**",
  "**/*.pyc",
  "**/*.sqlite",
  "**/*.sqlite-journal",
  ".venv/**",
  ".pytest_cache/**",
  ".coverage",
  "htmlcov/**",
  "dist/**",
  "build/**",
  "*.egg-info/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/mcp_fssp"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
